--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'java'
 
-repositories {
-  mavenCentral()
+allprojects {
+  repositories {
+    mavenCentral()
+  }
 }
 
 dependencies {
